# teamsite-zoom

./: .pre-commit-config.yaml  LICENCE  README.md  pyproject.toml
.github/workflows/: test-sqlite.yaml
django_site/: asgi.py  settings.py  urls.py  wsgi.py
teamsite_zoom/: admin.py  apps.py  models.py  schema.py  urls.py
teamsite_zoom/management/commands/: fetch_zoom_users.py  webinar_sync.py
teamsite_zoom/migrations/: 0001_initial.py
teamsite_zoom/tasks/: api.py
teamsite_zoom/tasks/webhook/: __init__.py  _user.py
teamsite_zoom/views/: auth.py  webhook.py  webinar.py
teamsite_zoom/zoom/: __init__.py  auth.py
tests/: test_webinar_event.py
